--- a/app/src/main/res/layout/content_detalles_food.xml
+++ b/app/src/main/res/layout/content_detalles_food.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="2dp"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -41,19 +41,6 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:src="@drawable/ic_restaurant_black_24dp"
-                        android:layout_weight="4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:text="Categoria"
-                        android:textColor="@color/overlayBackground"
-                        android:textSize="18sp"
-                        android:layout_weight="9"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"/>
                     <TextView
                         android:id="@+id/nombreCategoria"
                         android:text="NombCategoria"
@@ -62,6 +49,7 @@
                         android:textStyle="bold"
                         android:layout_weight="26"
                         android:layout_width="0dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
@@ -72,9 +60,29 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            android:layout_height="wrap_content"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="false">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:src="@drawable/restaurantebany"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:scaleType="centerCrop"/>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -131,8 +139,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -171,8 +179,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="6dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -204,8 +212,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="7dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -242,8 +250,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="8dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
@@ -280,8 +288,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            app:cardElevation="1dp"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="9dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_gravity="center"
