--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,12 +3,17 @@
 
     <item
         android:id="@+id/navigation_ListaRest"
-        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
-        android:title="Lista de Restaurantes" />
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Inicio"/>
 
     <item
         android:id="@+id/navigation_LocaMaps"
         android:icon="@drawable/ic_map_black_24dp"
-        android:title="Localización Restaurantes" />
+        android:title="Mapas" />
+
+    <item
+        android:id="@+id/navigation_Megusta"
+        android:icon="@drawable/ic_favorite_black_24dp"
+        android:title="Me gusta" />
 
 </menu>
