--- a/app/src/main/res/layout/location_maps_fragment.xml
+++ b/app/src/main/res/layout/location_maps_fragment.xml
@@ -15,9 +15,8 @@
 
          android:id="@+id/create"
          android:layout_marginLeft="15dp"
-
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="50dp"
+         android:layout_height="50dp"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:layout_marginTop="10dp"
