--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -27,41 +27,29 @@
 
                 android:layout_width="wrap_content"
 
+
                 android:id="@+id/nom"
                 android:text="Nombre:"
-                android:textStyle="italic"
+                android:textStyle="normal"
                 android:textSize="15dp"
-
+                android:textColor="#07d460"
                 android:layout_height="wrap_content" />
             <TextView
-
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
-
                 android:id="@+id/descr"
                 android:text="Dscripcion:"
-                android:textStyle="italic"
-
+                android:textStyle="normal"
+                android:textColor="#111"
                 android:textSize="15dp"
 
                 android:layout_height="wrap_content" />
+
+
 
 
         </LinearLayout>
-        <TextView
-            android:layout_marginTop="5dp"
 
-            android:text="$ Precio"
-            android:layout_width="0dp"
-            android:textSize="15dp"
-            android:id="@+id/pre"
-            android:background="#111"
-            android:textColor="#111"
-            android:layout_weight="2"
-            android:layout_height="30dp"
-            android:gravity="center"
-
-            />
 
     </LinearLayout>
 
