--- a/app/src/main/res/layout/activity_megusta_fragment.xml
+++ b/app/src/main/res/layout/activity_megusta_fragment.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.MegustaFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MMe gusta"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="234dp" />
 
-</LinearLayout>
+    android:orientation="vertical"
+    android:id="@+id/dato1"
+tools:context=".View.ListaFragment">
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recibe"
+            android:visibility="gone"
+            />
+
+
+
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_below="@+id/searchBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/myreclicleview">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.NestedScrollView>
+
+
+
+</FrameLayout>
