--- a/app/src/main/res/layout/entrada.xml
+++ b/app/src/main/res/layout/entrada.xml
@@ -1,60 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
+        >
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:scrollbars="vertical"
-            tools:context="com.adroitminds.tabbedview.Section2">
-
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="114dp"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-
+                android:orientation="vertical"
+                android:scrollbars="vertical"
+                tools:context="com.adroitminds.tabbedview.Section2">
                 <TextView
                     android:layout_width="wrap_content"
+
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="cursive"
                     android:paddingTop="5dp"
-                    android:text="Entradas"
+                    android:text="Entrada"
                     android:textColor="#111111"
-                    android:textSize="45dp" />
-
+                    android:textSize="40dp" />
                 <ImageView
-                    android:id="@+id/infoEntrada"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="15dp"
-                    android:src="@drawable/ic_info_outline_black_24dp" />
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/restaurant"
 
-            </LinearLayout>
+                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp">
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+
+                            android:gravity="center_horizontal">
+
+                            <EditText
+                                android:id="@+id/entrada1"
+                                android:layout_width="282dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentTop="true"
+                                android:layout_centerHorizontal="true"
+                                android:drawableStart="@drawable/breakfast"
+                                android:ems="10"
+                                android:hint="Entrada"
+                                android:inputType="textPersonName"
+                                android:textColorHint="#fc050000" />
+
+
+
+
+                        </android.support.design.widget.TextInputLayout>
+                    </RelativeLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -64,102 +76,91 @@
                         android:gravity="center_horizontal">
 
                         <EditText
-                            android:id="@+id/entrada1"
+                            android:id="@+id/precio"
                             android:layout_width="282dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
+                            android:drawableStart="@drawable/ic_attach_money_black_24dp"
                             android:layout_centerHorizontal="true"
-                            android:drawableStart="@drawable/breakfast"
+                            android:layout_marginTop="166dp"
                             android:ems="10"
-                            android:hint="Entrada"
-                            android:inputType="textPersonName"
-                            android:textColorHint="#fc050000" />
+                            android:hint="Precio"
+                            android:inputType="number" />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <Spinner
+                                android:id="@+id/horarios"
+                                android:layout_width="250dp"
+                                android:layout_marginStart="60dp"
+                                android:layout_height="wrap_content">
+
+                            </Spinner>
+
+                        </LinearLayout>
                     </android.support.design.widget.TextInputLayout>
-                </RelativeLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center_horizontal">
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
 
-                    <EditText
-                        android:id="@+id/precio"
-                        android:layout_width="282dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="166dp"
-                        android:drawableStart="@drawable/ic_attach_money_black_24dp"
-                        android:ems="10"
-                        android:hint="Precio"
-                        android:inputType="number" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center_horizontal">
+                        <EditText
+                            android:id="@+id/descripcion"
+                            android:layout_width="282dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:lines="4"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="166dp"
+                            android:ems="10"
+                            android:drawableStart="@drawable/ic_description_black_24dp"
+                            android:hint="Descripcion"
+                            android:inputType="textImeMultiLine" />
+                    </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center_horizontal">
 
-                    <EditText
-                        android:id="@+id/descripcion"
-                        android:layout_width="282dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="166dp"
-                        android:drawableStart="@drawable/ic_description_black_24dp"
-                        android:ems="10"
-                        android:hint="Descripcion"
-                        android:inputType="textImeMultiLine"
-                        android:lines="4" />
-                </android.support.design.widget.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <Spinner
-                        android:id="@+id/diaReg1"
-                        android:layout_width="300dp"
-                        android:layout_marginStart="30dp"
-                        android:layout_height="wrap_content">
-
-                    </Spinner>
                 </LinearLayout>
+                <LinearLayout
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/fotoentrada"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="99dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/img_base" />
-
-                <Button
-                    android:id="@+id/Registrar"
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:backgroundTint="@color/LightGreen"
-                    android:text="Registrar"
-                    android:textColor="#ffffff" />
-
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/fotoentrada"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="100dp"
+                        android:src="@drawable/img_base"
+                        android:layout_height="100dp" />
+                </LinearLayout>
             </LinearLayout>
+        </ScrollView>
 
-        </LinearLayout>
-    </ScrollView>
-</android.support.design.widget.CoordinatorLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fotos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="450dp"
+
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ImageView
+        android:id="@+id/Registrar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:paddingStart="10dp"
+        android:layout_gravity="bottom|start"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="450dp"
+        android:src="@drawable/ic_check_black_24dp"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 
 
