--- a/app/src/main/res/layout/fragment_resta_extras.xml
+++ b/app/src/main/res/layout/fragment_resta_extras.xml
@@ -1,47 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-
-    tools:context=".View.HomeActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-
+    android:layout_height="match_parent"
+    tools:context=".View.RegistroMenu1"
+    >
 
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollbarStyle="insideOverlay">
-
-
-        <LinearLayout
-           android:padding="40dp"
-            android:layout_width="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
 
+            android:orientation="vertical"
+            android:scrollbars="vertical"
+            tools:context="com.adroitminds.tabbedview.Section2">
 
+            <TextView
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="cursive"
+                android:paddingTop="5dp"
+                android:text="Menú"
+                android:textColor="#111111"
+                android:textSize="50dp" />
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:src="@drawable/restaurant"
+
+                android:layout_height="wrap_content" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -54,17 +57,25 @@
 
                         android:gravity="center_horizontal">
 
-
                         <EditText
-                            android:id="@+id/nombre"
+                            android:id="@+id/extras"
                             android:layout_width="282dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
                             android:layout_centerHorizontal="true"
-                            android:drawableStart="@drawable/ic_store_black_24dp"
+                            android:drawableStart="@drawable/breakfast"
                             android:ems="10"
-                            android:hint="nombre"
-                            android:inputType="textPersonName" />
+                            android:hint="PLATOS EXTRAS"
+                            android:inputType="textPersonName"
+                            android:textColorHint="#fc050000" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+
+                        </RelativeLayout>
+
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -77,18 +88,19 @@
                     android:gravity="center_horizontal">
 
                     <EditText
-                        android:id="@+id/direccion"
+                        android:id="@+id/precioextras"
                         android:layout_width="282dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-
-                        android:drawableStart="@drawable/ic_directions_black_24dp"
+                        android:drawableStart="@drawable/ic_attach_money_black_24dp"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="166dp"
                         android:ems="10"
-                        android:hint="Direccion"
-                        android:inputType="textMultiLine" />
+                        android:hint="Precio"
+                        android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
+
+
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -96,58 +108,34 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:gravity="center_horizontal">
-
                     <EditText
-                        android:id="@+id/telefono"
+                        android:id="@+id/comentario"
                         android:layout_width="282dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+                        android:lines="4"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="166dp"
                         android:ems="10"
-                        android:drawableStart="@drawable/ic_phone_black_24dp"
-
-                        android:hint="Telefono"
-                        android:inputType="number" />
+                        android:drawableStart="@drawable/ic_description_black_24dp"
+                        android:hint="Descripcion"
+                        android:inputType="textImeMultiLine" />
                 </android.support.design.widget.TextInputLayout>
-                <Spinner
-                    android:id="@+id/categoria"
-                    android:layout_width="280dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="1"
-                    />
-                <EditText
-                    android:id="@+id/horarios"
-                    android:layout_width="282dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:drawableStart="@drawable/ic_event_black_24dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="2dp"
-                    android:ems="10"
-                    android:hint="Seleccione Horario"
-                    />
             </LinearLayout>
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
-
-
-
                 <ImageView
-                    android:id="@+id/idimagen"
-                    android:layout_marginTop="10dp"
+                    android:id="@+id/fotoextra"
+                    android:layout_marginTop="5dp"
                     android:layout_width="100dp"
                     android:src="@drawable/img_base"
                     android:layout_height="100dp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
@@ -155,10 +143,10 @@
                 android:layout_height="wrap_content">
                 <Button
 
-                    android:id="@+id/createRes"
+                    android:id="@+id/regisextras"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="90dp"
+                    android:layout_marginStart="145dp"
                     android:layout_gravity="center_horizontal"
                     android:backgroundTint="@color/colorPrimary"
                     android:text="Registrar"
@@ -172,7 +160,4 @@
         </LinearLayout>
     </ScrollView>
 
-
-
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
