--- a/app/src/main/res/layout/iten_horarios.xml
+++ b/app/src/main/res/layout/iten_horarios.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:padding="10dp"
         android:layout_width="match_parent"
-      android:weightSum="10"
+        android:weightSum="10"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="0dp"
@@ -16,7 +16,7 @@
             android:scaleType="centerCrop"
             android:background="#111"
             android:layout_height="128dp" />
-        
+
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_width="0dp"
@@ -45,22 +45,15 @@
 
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="50dp"
-                android:id="@+id/precio"
-                android:text="precio:"
-                android:background="@drawable/precio"
-                android:textStyle="normal"
-                android:textColor="#111"
-                android:textSize="15dp"
-
-                android:layout_height="30dp" />
-
-
-
-
         </LinearLayout>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:textSize="15dp"
+            android:text="$precio"
+            android:layout_height="wrap_content" />
+
 
 
 
